updated instructions for setting up environment

--- a/GROUP_PYTHON_CLASS/1.setting_up_your_environment_v2.ipynb
+++ b/GROUP_PYTHON_CLASS/1.setting_up_your_environment_v2.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +23,7 @@
     " * Save the key somewhere safe\n",
     " \n",
     "**2. SSH as user `student` to server `python-class`**\n",
-    " * `ssh -i id_rsa_python_class student@python-class`\n",
+    " * `ssh -i [Desktop/]id_rsa_python_class student@python-class`\n",
     " \n",
     "**3. Create your working directory**\n",
     " * `mkdir <username>`\n",
@@ -37,14 +36,9 @@
    "metadata": {},
    "source": [
     "# Install Docker\n",
-    "* `yum install docker`\n",
-    "* `service docker restart`\n",
-    "* `docker ps` (there should be no running containers)\n",
-    "\n",
-    "To use Docker without typing `sudo` every time, add the Docker group (if it doesn’t already exist)\n",
-    "* `sudo groupadd docker`\n",
-    "* `sudo usermod -aG docker $USER`\n",
-    "* Log out and log back in again"
+    "* `yum install docker -y`\n",
+    "* `systemctl start docker`\n",
+    "* `docker ps` (there should be no running containers)"
    ]
   },
   {
@@ -60,60 +54,14 @@
     "\n",
     "**2. From the cloned folder, pull the Docker image.**<br>\n",
     "We will use an image for running a Jupyter server and call our container **<your_username>**.\n",
-    "* ```docker pull jupyter/minimal-notebook```<vr>\n",
-    "* ```docker run -d -v `pwd`:/home/jovyan/work -p <your_assigned_port>:8888 --name <your_username> jupyter/minimal-notebook```<br>\n",
+    "* ```docker pull jupyter/minimal-notebook```\n",
+    "* ```sudo docker run -it -d -p <your_port>:8888 -v `pwd`:/home/jovyan/work --user root -e GRANT_SUDO=yes --name <your_container> jupyter/minimal-notebook```\n",
     "\n",
-    "**3. Hold down the ```command/ctrl``` key and click on the link to get to the Jupyter server in your browser.**<br>\n",
-    "Alternatively, you can use the following command to get the link:\n",
-    "* ```docker exec <your_username> jupyter notebook list```\n",
+    "**3. Hold down the ```command/ctrl``` key and click on the link to get to the Jupyter server in your browser OR go to `<your_ip>:<your_port>` in a browser**<br>\n",
+    "To get the token, type:\n",
+    "* ```docker exec <your_container> jupyter notebook list```\n",
     "\n",
     "You should be able to access the cloned repository via your web browser and start coding in Python using Jupyter notebooks!"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "------\n",
-    "# Push to your own repository\n",
-    "Duplicate a notebook and add your name to the end of the file. Then, update `.gitignore` to include notebooks with `*jmho*`\n",
-    "\n",
-    "* Create a repository in your own Github account\n",
-    "* Add your key to Github (`cat ~/.ssh/id_rsa.pub`)\n",
-    "* Add your repository as a remote alias (`git remote add <username> <your_github_repository>\n",
-    "* Check that the new remote has been added (`git remote -v`)\n",
-    "* Push to your work to your own repository (`git push <username> master`)\n",
-    "\n",
-    "[Github Slides](https://github.com/travisDhuang/DAT8/blob/master/slides/02_git_github.pdf)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "------\n",
-    "# Pushing and puling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From now on, we will *pull* our work from the origin repository and *push* your own work to your personal repository.\n",
-    "\n",
-    "Before each lesson, pull updates from the git repo by doing the following:\n",
-    "* `git pull origin master`\n",
-    "\n",
-    "During each lesson, open the blank notebook and add your name to the end of the title \n",
-    "* (e.g. `2.data_types_jmho`)\n",
-    "\n",
-    "After each lesson, push your work to your personal repo by doing the following:\n",
-    "* `git push public master`\n",
-    "\n",
-    "See [0.daily_tasks.ipynb](https://github.com/josephinemho/python_class/blob/master/0.daily_tasks.ipynb) for details."
    ]
   }
  ],
