updated daily tasks

--- a/GROUP_PYTHON_CLASS/0.daily_tasks.ipynb
+++ b/GROUP_PYTHON_CLASS/0.daily_tasks.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "# 1. Pull from origin remote\n",
-    "* `cd` into your working directory (e.g. python_class)\n",
+    "* `cd` into your working directory (e.g. jmho)\n",
     "* `git pull origin master`"
    ]
   },
@@ -21,10 +21,10 @@
    "metadata": {},
    "source": [
     "# 2. Get to the Jupyter server\n",
-    "* Open web browser and get to your Jupyter environment. \n",
+    "* Open web browser to get to your Jupyter environment. \n",
     "\n",
-    "The link should be `<ip>:<port>` (if you are running Docker locally, then replace `<ip>` with `localhost`.\n",
-    "* To find the port that your docker container is using, type `docker ps`\n",
+    "The link should be `<server>:<port>`\n",
+    "* To find the port that your docker container is using, type `docker ps -a`\n",
     "* To find the token to access the jupyter server, type `docker exec <container_name> jupyter notebook list`"
    ]
   },
