update gitignore, add sudo to docker commands

--- a/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
+++ b/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
@@ -54,12 +54,12 @@
     "\n",
     "**2. From the cloned folder, pull the Docker image.**<br>\n",
     "We will use an image for running a Jupyter server and call our container **<your_username>**.\n",
-    "* ```docker pull jupyter/minimal-notebook```\n",
+    "* ```sudo docker pull jupyter/minimal-notebook```\n",
     "* ```sudo docker run -it -d -p <your_port>:8888 -v `pwd`:/home/jovyan/work --name <your_container> jupyter/minimal-notebook```\n",
     "\n",
     "**3. Hold down the ```command/ctrl``` key and click on the link to get to the Jupyter server in your browser OR go to your browser and type `<your_ip>:<your_port>`**<br>\n",
     "To get the token, type:\n",
-    "* ```docker exec <your_container> jupyter notebook list```\n",
+    "* ```sudo docker exec <your_container> jupyter notebook list```\n",
     "\n",
     "You should be able to access the cloned repository via your web browser and start coding in Python using Jupyter notebooks!"
    ]
