updated security group to include port 8888

--- a/4.setting_up_aws/4.setting_up_aws_pt1.ipynb
+++ b/4.setting_up_aws/4.setting_up_aws_pt1.ipynb
@@ -34,7 +34,8 @@
     " \n",
     "### Create Security Group\n",
     " * Click **Security Groups (under Network & Security) --> Create Security Group**. Add the following Inbound rules and create the security group. \n",
-    " ![](images/aws_create_security_group.png)"
+    " ![](images/aws_create_security_group.png)\n",
+    "**Note**: You can set the Source to \"My IP\" if your IP will not change (for example, if you are working from home only), but I recommend setting all three to \"Anywhere\" (which is less secure, but guarantees you have access to your Jupyter server even if you're connecting from a "
    ]
   },
   {
