updated ssh_http_jupyter security group

--- a/4.setting_up_aws/4.setting_up_aws_pt1.ipynb
+++ b/4.setting_up_aws/4.setting_up_aws_pt1.ipynb
@@ -35,7 +35,7 @@
     "### Create Security Group\n",
     " * Click **Security Groups (under Network & Security) --> Create Security Group**. Add the following Inbound rules and create the security group. \n",
     " ![](images/aws_create_security_group.png)\n",
-    "**Note**: You can set the Source to \"My IP\" if your IP will not change (for example, if you are working from home only), but I recommend setting all three to \"Anywhere\" (which is less secure, but guarantees you have access to your Jupyter server even if you're connecting from a "
+    "**Note**: You can set the Source to \"My IP\" if your IP will not change (for example, if you are working from home only), but I recommend setting all three to \"Anywhere\" (which is less secure, but guarantees you have access to your Jupyter server even if you're connecting from a wifi at work or on-the-go). "
    ]
   },
   {
@@ -52,8 +52,8 @@
     " * The fourth tab is \"Add Storage.\" Change the size from 10GB to 30GB. This is because our Jupyter Docker images can take up more than 5GB of disk space in the local image cache. Also, as noted on this tab:\n",
     " > Free tier eligible customers can get up to 30 GB of EBS General Purpose (SSD) or Magnetic storage.\n",
     " * The fifth tab \"Add Tags\" can be safely ignored\n",
-    " * The sixth tab \"Configure Security Group\" is critical for the proper functioning of your server. By default this tab will be set up to \"Create a new security group\". This will not work for us! We recommend using the security group we created earlier (e.g. `ssh_http`) which will open the server on ports 22 and 80. \n",
-    "  * Click **Select an existing security group** and select the `ssh_http` security group we created earlier.\n",
+    " * The sixth tab \"Configure Security Group\" is critical for the proper functioning of your server. By default this tab will be set up to \"Create a new security group\". This will not work for us! We recommend using the security group we created earlier (e.g. `ssh_http_jupyter`) which will open the server on ports 22 and 80. \n",
+    "  * Click **Select an existing security group** and select the `ssh_http_jupyter` security group we created earlier.\n",
     " * **Review and Launch --> Launch**\n",
     "\n",
     "Finally, you must \"Select an existing key pair or create a new key pair.\" Select **Choose an existing key pair** and select the key pair you imported earlier. \n",
